[workspace]
resolver = "2"
members = [ "CLI_Tools/ansi_terminal", "CLI_Tools/arg_passing",
    "algorithms/random_values",
    "algorithms/vector_sorting", 
    "compression/tarball_compress", 
    "compression/tarball_decompress",
    "projects/ip_sniffer", 
    "projects/snake_game"
]

[workspace.dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
piston_window = "*"
clap = "4.5.1"
ansi_term = "0.12.1"
flate2 = "1.0.28"
tar = "0.4.40"
